--- a/css/matery.css
+++ b/css/matery.css
@@ -241,7 +241,7 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #0e597700 0%, #11324749 100%);
+    background-image: linear-gradient(to right, #5a8083 0%, #0f6f9d 100%);
 }
 
 .text-color {
